sample/sample.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: sample
  template:
    metadata:
      labels:
        app: sample
    spec:
      containers:
        - image: 949993607219.dkr.ecr.ap-northeast-1.amazonaws.com/test-1shikawa:74e3189678ff75178481f15800f393e8485390bc
          name: sample
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: sample
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: sample
